fix: select token overlap fixed (#136)

--- a/src/components/Transaction/Transaction.scss
+++ b/src/components/Transaction/Transaction.scss
@@ -812,7 +812,7 @@ p.transaction-hash {
           &.border {
             width: calc(100% - 40px);
             height: 90px;
-            padding: 15px 0 0;
+            padding: 0;
           }
 
           & > .custom-selector{
